--- a/register-login.html
+++ b/register-login.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+        <title>Register/Login Page</title>
         <link rel = "stylesheet" href = "css/register-login.css">
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="https//cdn.jsdelivr.net/jquery.validation/1.16.0/jqery.validate.min.js"></script>
