--- a/alan.html
+++ b/alan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alan Turing</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -17,25 +17,24 @@
     </nav>
        
             
-    <header>
-        <div class ="banner-area">
-            <div class="sigle-banner">
-                <div class="banner-img">
-                    <img src = "img/om7/alan-img1.JPG" alt="">
-                </div>
-            </div>
-            <div class="sigle-banner">
-                <div class="banner-img">
-                    <img src = "img/om7/alan-img2.JPG" alt="">
-                </div>
-            </div>
-            <div class="sigle-banner">
-                <div class="banner-img">
-                    <img src = "img/om7/alan-img3.JPG" alt="">
-                </div>
+   
+    <div class ="banner-area">
+        <div class="sigle-banner">
+            <div class="banner-img">
+                <img src = "img/om7/alan-img1.JPG" alt="">
             </div>
         </div>
-    <header>
+        <div class="sigle-banner">
+            <div class="banner-img">
+                <img src = "img/om7/alan-img2.JPG" alt="">
+            </div>
+        </div>
+        <div class="sigle-banner">
+            <div class="banner-img">
+                <img src = "img/om7/alan-img3.JPG" alt="">
+            </div>
+        </div>
+    </div>
 
 
 </body>
