--- a/davinci.html
+++ b/davinci.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Leonardo DaVinci</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -16,26 +16,23 @@
         </div>   
     </nav>
        
-            
-    <header>
-        <div class ="banner-area">
-            <div class="sigle-banner">
-                <div class="banner-img">
-                    <img src = "img/om3/dav-img1.JPG" alt="">
-                </div>
-            </div>
-            <div class="sigle-banner">
-                <div class="banner-img">
-                    <img src = "img/om3/dav-img2.JPG" alt="">
-                </div>
-            </div>
-            <div class="sigle-banner">
-                <div class="banner-img">
-                    <img src = "img/om3/dav-img3.JPG" alt="">
-                </div>
+    <div class ="banner-area">
+        <div class="sigle-banner">
+            <div class="banner-img">
+                <img src = "img/om3/dav-img1.JPG" alt="">
             </div>
         </div>
-    <header>
+        <div class="sigle-banner">
+            <div class="banner-img">
+                <img src = "img/om3/dav-img2.JPG" alt="">
+            </div>
+        </div>
+        <div class="sigle-banner">
+            <div class="banner-img">
+                <img src = "img/om3/dav-img3.JPG" alt="">
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
