--- a/register-login.html
+++ b/register-login.html
@@ -35,8 +35,8 @@
                                 <input type="password" name="password" placeholder="Password" autocomplete="off" class="form-control text">
                             </div>
                             <div class="form-group">
-                                <label for="">
-                                    <input type="checkbox" checked name="" id=""> Remember Me
+                                <label for="Remember">
+                                    <input type="checkbox" checked name="Remember" id="Remember"> Remember Me
                                 </label>
                             </div>
                             <button class="submit-btn">Login</button>
@@ -56,10 +56,10 @@
                             </div>
                             <div class="form-group">
                                 <p>Alege sexul:</p>
-                                <input type="radio" id="html" name="fav_language" value="HTML">
-                                <label1 for="html">M</label1><br>
-                                <input type="radio" id="css" name="fav_language" value="CSS">
-                                <label1 for="css">F</label1>
+                                <input type="radio" id="masc" name="gen" value="M">
+                                <label  for="masc"><span>M</span></label><br>
+                                <input type="radio" id="fem" name="gen" value="F">
+                                <label  for="fem"><span>F</span></label>
                             </div>
                             <button class="submit-btn">Register</button>
                         </form>
