--- a/404error.html
+++ b/404error.html
@@ -10,11 +10,11 @@
     <body>
         <h1>404 Error Page</h1>
         <p class="zoom-area">Page not found. </p>
-        <section class="error-container">
+        <div class="error-container">
         <span class="four"><span class="screen-reader-text">4</span></span>
         <span class="zero"><span class="screen-reader-text-zero">0</span></span>
         <span class="four1"><span class="screen-reader-text">4</span></span>
-        </section>
+        </div>
         <div class="link-container">
         <a target="_blank" href="register-login.html" class="more-link">Return Home?</a>
         </div>
