--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </nav>
         </div>
         <main>
-                <section class="boxes">
+                <div class="boxes">
                     <div class="box generalitati">
                             <div class="icon"><img src="img/group.jpg" alt=""></div>
                         <div class="logo-descript">
@@ -187,7 +187,7 @@
                             </a>
                         </div>
                     </div>
-                </section>           
+                </div>           
             
         </main>
     </body>
