--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -158,12 +158,12 @@
             </form>
         </nav>
     </div>
-   <section class="banner">
+   <div class="banner">
         <div class = "imagine"></div>
         <div id="buttonquiz">
             <a class="go-quiz" href="quiz.html"><b>Vezi acum!</b></a>
         </div>
-    </section>
+    </div>
 <main>
     
     <div class="invents">
