--- a/quiz.html
+++ b/quiz.html
@@ -168,10 +168,9 @@
           <div class="image">
             <img src="./img/domains/fizica-domain.jpeg" alt="quiz fizica">
             <div class="details">
-              <h2>Your <span>Title</span></h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h2><span>Quiz 1</span></h2>
               <div class="more">
-                <a href="404error.html" class="read-more">Read <span>More</span></a>
+                <a href="404error.html" class="read-more">Take <span>Quiz</span></a>
               </div>
             </div>
           </div>
@@ -180,10 +179,9 @@
           <div class="image">
             <img src="./img/domains/chimie-domain.jpg" alt="quiz chimie">
             <div class="details">
-              <h2>Your <span>Title</span></h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h2><span>Quiz 2</span></h2>
               <div class="more">
-                <a href="404error.html" class="read-more">Read <span>More</span></a>
+                <a href="404error.html" class="read-more">Take <span>Quiz</span></a>
               </div>
             </div>
           </div>
@@ -192,10 +190,9 @@
           <div class="image">
             <img src="./img/domains/medicina-domain.jpg" alt="quiz medicina">
             <div class="details">
-              <h2>Your <span>Title</span></h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h2><span>Quiz 3</span></h2>
               <div class="more">
-                <a href="404error.html" class="read-more">Read <span>More</span></a>
+                <a href="404error.html" class="read-more">Take <span>Quiz</span></a>
               </div>
             </div>
           </div>
@@ -208,10 +205,9 @@
           <div class="image">
             <img src="./img/domains/aviatie-domain.jpg" alt="quiz aviatie">
             <div class="details">
-              <h2>Your <span>Title</span></h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h2><span>Quiz 4</span></h2>
               <div class="more">
-                <a href="404error.html" class="read-more">Read <span>More</span></a>
+                <a href="404error.html" class="read-more">Take <span>Quiz</span></a>
               </div>
             </div>
           </div>
@@ -220,10 +216,9 @@
           <div class="image">
             <img src="./img/domains/navigatie-domain.jpg" alt="quiz navigație">
             <div class="details">
-              <h2>Your <span>Title</span></h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h2><span>Quiz 5</span></h2>
               <div class="more">
-                <a href="404error.html" class="read-more">Read <span>More</span></a>
+                <a href="404error.html" class="read-more">Take <span>Quiz</span></a>
               </div>
             </div>
           </div>
